--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "autotests-hw-with-auto-check",
     "version": "1.0.0",
     "scripts": {
-        "start": "nodemon ./src/server/index.ts",
-        "test:unit": "jest",
-        "test:e2e": "node_modules/.bin/hermione",
-        "test:e2e:gui": "node_modules/.bin/hermione gui",
+        "start": "npx nodemon ./src/server/index.ts",
+        "test:unit": "npx jest --testPathPattern=test/unit",
+        "test:e2e": "npx playwright test",
+        "test:e2e:gui": "npx playwright test --ui",
         "test": "npm run test:unit && npm run test:e2e",
-        "build": "webpack --mode=production --node-env=production",
-        "watch": "webpack --watch"
+        "build": "npx webpack --mode=production --node-env=production",
+        "watch": "npx webpack --watch"
     },
     "dependencies": {
         "@bem-react/classname": "^1.5.12",
@@ -17,7 +17,6 @@
         "bootstrap": "^5.1.3",
         "express": "^4.17.1",
         "faker": "^5.5.3",
-        "html-reporter": "^9.7.1",
         "immer": "^9.0.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -31,6 +30,8 @@
     },
     "devDependencies": {
         "@jest/globals": "^29.3.1",
+        "@playwright/test": "^1.35.1",
+        "@testing-library/jest-dom": "^5.16.5",
         "@types/express": "^4.17.13",
         "@types/faker": "^5.5.9",
         "@types/jest": "^29.2.4",
@@ -44,7 +45,6 @@
         "@types/webpack": "^5.28.0",
         "chai": "^4.3.7",
         "css-loader": "^6.3.0",
-        "hermione": "^5.6.1",
         "html-webpack-plugin": "^5.3.2",
         "jest": "^29.3.1",
         "jest-environment-jsdom": "^29.3.1",
